MUSARK-1243 bugfix: Fixed css to avoid using z-index

--- a/src/modules/app/AppComponent.css
+++ b/src/modules/app/AppComponent.css
@@ -17,12 +17,13 @@ nav.fa {
 }
 
 .appContent {
-  margin: 50px 0;
+  margin-top: 55px;
+  margin-bottom: 50px;
+  padding-bottom: 35px;
 }
 
 .footer {
   text-align: right;
-  position: fixed;
   bottom: 0;
   width: 100%;
 }
