--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 body {
-    margin-bottom: 85px;
+    margin: 0;
+    padding: 0;
 }
 
 .icon {
